@@ -66,7 +66,7 @@ The deskbar is customizable and completely open-source.
 
 </ul>
 <p>
-Finally, the following are default key bindings.  Some of these can be customized in localprefs.js:
+Finally, the following are default key bindings.  Some of these can be customized in <a href="view-source:localprefs.js">localprefs.js</a>:
 <table id='keybindings' cellspacing="0">
 <tr><th>Key(s)</th><th>Description</th></tr>
 <tr><td class='keyname'>F1</td><td class='desc'>Display menu</td></tr>
@@ -75,15 +75,15 @@ Finally, the following are default key bindings.  Some of these can be customize
 
 <tr><td class='keyname'>Shift-Enter</td><td class='desc'>Always opens a new window for the search regardless of the reuseWindowMode setting.  This works only when IE is the default browser.</td></tr>
 
-<tr><td class='keyname'>Ctrl-B<br/>F8</td><td class='desc'>Search the search history for the current text</td></tr>
+<tr><td class='keyname'>Ctrl-B, F8</td><td class='desc'>Search back through the search history for the current text</td></tr>
 
-<tr><td class='keyname'>Shift-Ctrl-B<br/>Shift-F8</td><td class='desc'>Search the history for the current text as a prefix</td></tr>
+<tr><td class='keyname'>Shift-Ctrl-B, Shift-F8</td><td class='desc'>Search forward through the history for the current text</td></tr>
 
 <tr><td class='keyname'>Win-S</td><td class='desc'>Make the search bar active (i.e., make it have the current focus)</td></tr>
 
-<tr><td class='keyname'>Ctrl-P<br/>Up</td><td class='desc'>Display previous search</td></tr>
+<tr><td class='keyname'>Ctrl-P, Up</td><td class='desc'>Display previous search</td></tr>
 
-<tr><td class='keyname'>Ctrl-N<br/>Down</td><td class='desc'>Display next search</td></tr>
+<tr><td class='keyname'>Ctrl-N, Down</td><td class='desc'>Display next search</td></tr>
 </table>
 
 </p>
@@ -880,7 +880,7 @@ function postStartup()
     keyboardHook.MapKeyCode( historySearchVkCode, 2 ); // Map key to the history search
 
 //   keyboardHook.ShutdownBar();
-    
+
     if ( refreshIconsAtStartup )
       refreshIcons();
   }
